test/expected/explain_ac9i.out
explain int a[const 9]
              ^
15: syntax error: "const": ']' expected ("const" is a keyword)
